--- a/admin/index.html
+++ b/admin/index.html
@@ -67,6 +67,7 @@
             <h1 style="color:#0b4f6c; font-size:2.2em;">Studio Booking 管理面板</h1>
             <p style="color:#52606d;">快速管理預約、設定、課程與場地資訊。</p>
             <p id="adminIdentity" style="color:#52606d; font-size:0.95em; margin-top:6px; display:none;"></p>
+            <div id="apiStatusMessage" class="message" style="margin-top:12px;"></div>
             <button class="logout-btn" onclick="logout()">登出</button>
             <div class="stat-grid">
                 <div class="stat-card" id="stat-total"><h4>總預約數</h4><p>0</p></div>
@@ -177,6 +178,7 @@
             </div>
         </div>
         <div id="instructionsTab" class="tab-content">
+            <div id="instructionsMessage" class="message"></div>
             <div class="section-card">
                 <h3>預約須知內容</h3>
                 <div class="form-grid two-columns">
@@ -229,19 +231,70 @@
         </div>
     </div>
     <script>
-        const API_BASE_URL = (() => {
+        function resolveApiBaseUrl(storageKey) {
             const DEFAULT_API_PATH = '/api';
-            const DEFAULT_ORIGIN = (window.location.origin && window.location.origin !== 'null') ? window.location.origin : 'http://localhost:3000';
-            const resolveUrl = (value) => { if (!value) return null; try { return new URL(value, DEFAULT_ORIGIN).toString().replace(/\/+$/, ''); } catch (error) { console.warn('Invalid API base URL:', value, error); return null; } };
+            const RENDER_API_ORIGIN = 'https://booking-ub69.onrender.com';
+            const fallbackOrigin = RENDER_API_ORIGIN;
+            const baseOrigin = (window.location.origin && window.location.origin !== 'null')
+                ? window.location.origin
+                : fallbackOrigin;
+
+            const normalizeBaseUrl = (value) => {
+                if (!value) return null;
+                try {
+                    const url = new URL(value, baseOrigin);
+                    const normalizedPath = url.pathname.replace(/\/+$/, '');
+                    return normalizedPath ? `${url.origin}${normalizedPath}` : url.origin;
+                } catch (error) {
+                    console.warn('Invalid API base URL provided:', value, error);
+                    return null;
+                }
+            };
+
             const params = new URLSearchParams(window.location.search);
             const queryOverride = params.get('apiBaseUrl') || params.get('api_base_url');
             if (queryOverride) {
-                const url = resolveUrl(queryOverride);
-                if (url) { try { localStorage.setItem('admin.apiBaseUrl', url); } catch {} return url; }
+                const resolved = normalizeBaseUrl(queryOverride);
+                if (resolved) {
+                    try {
+                        localStorage.setItem(storageKey, resolved);
+                    } catch (error) {
+                        console.warn('Unable to persist API base URL override:', error);
+                    }
+                    return resolved;
+                }
             }
-            try { const stored = resolveUrl(localStorage.getItem('admin.apiBaseUrl')); if (stored) return stored; } catch {}
-            return `${DEFAULT_ORIGIN}${DEFAULT_API_PATH}`.replace(/\/+$/, '');
-        })();
+
+            try {
+                const stored = normalizeBaseUrl(localStorage.getItem(storageKey));
+                if (stored) {
+                    return stored;
+                }
+            } catch (error) {
+                console.warn('Unable to read stored API base URL override:', error);
+            }
+
+            const appendApiPath = (origin) => `${origin.replace(/\/+$/, '')}${DEFAULT_API_PATH}`;
+            const normalizedRenderOrigin = normalizeBaseUrl(RENDER_API_ORIGIN) || fallbackOrigin;
+            const normalizedCurrentOrigin = normalizeBaseUrl(baseOrigin);
+
+            if (normalizedCurrentOrigin && normalizedCurrentOrigin === normalizedRenderOrigin) {
+                return appendApiPath(normalizedCurrentOrigin);
+            }
+
+            const isLocalhost = normalizedCurrentOrigin
+                ? /^https?:\/\/(localhost|127\.0\.0\.1|0\.0\.0\.0)(:\\d+)?$/i.test(normalizedCurrentOrigin)
+                : false;
+
+            if (isLocalhost && normalizedCurrentOrigin) {
+                return appendApiPath(normalizedCurrentOrigin);
+            }
+
+            return appendApiPath(normalizedRenderOrigin);
+        }
+
+        const API_BASE_URL = resolveApiBaseUrl('admin.apiBaseUrl');
+        console.log('Using API_BASE_URL:', API_BASE_URL);
 
         const DEV_AUTH_DISABLED = true; // Toggle to false to restore admin authentication
         function isAuthDisabled() { return DEV_AUTH_DISABLED; }
@@ -250,6 +303,29 @@
         let refreshIntervalId = null;
         let currentSettings = {};
         let currentItems = [];
+
+        async function checkApiHealth() {
+            const statusEl = document.getElementById('apiStatusMessage');
+            if (!statusEl) return;
+            try {
+                const response = await fetch(`${API_BASE_URL}/health`);
+                if (!response.ok) {
+                    throw new Error(`HTTP ${response.status}`);
+                }
+                statusEl.className = 'message success';
+                statusEl.textContent = '已連線至後端 API。';
+                statusEl.style.display = 'block';
+                console.log('Connected to backend API');
+                setTimeout(() => {
+                    statusEl.style.display = 'none';
+                }, 4000);
+            } catch (error) {
+                console.error('API health check failed:', error);
+                statusEl.className = 'message error';
+                statusEl.textContent = '後端 API 無法連線，請檢查 API_BASE_URL 設定或 Render 服務是否正常。';
+                statusEl.style.display = 'block';
+            }
+        }
 
         function updateAdminIdentity(isLoggedIn) {
             const el = document.getElementById('adminIdentity');
@@ -400,6 +476,7 @@
         }
 
         document.addEventListener('DOMContentLoaded', async () => {
+            await checkApiHealth();
             const loginForm = document.getElementById('loginForm');
             if (loginForm) {
                 loginForm.addEventListener('submit', handleLogin);
@@ -536,14 +613,19 @@
             try {
                 const response = await fetch(`${API_BASE_URL}/stats`, { headers: authHeaders() });
                 if (response.status === 401) return logout();
-                if (response.ok) {
-                    const stats = await response.json();
-                    document.getElementById('stat-total').querySelector('p').textContent = stats.total;
-                    document.getElementById('stat-confirmed').querySelector('p').textContent = stats.confirmed;
-                    document.getElementById('stat-pending').querySelector('p').textContent = stats.pending;
+                if (!response.ok) {
+                    const errorPayload = await response.json().catch(() => ({}));
+                    console.error('Failed to load stats:', response.status, errorPayload);
+                    showMessage('bookingsMessage', 'error', errorPayload.error || '無法載入統計資料，請稍後再試。');
+                    return;
                 }
+                const stats = await response.json();
+                document.getElementById('stat-total').querySelector('p').textContent = stats.total;
+                document.getElementById('stat-confirmed').querySelector('p').textContent = stats.confirmed;
+                document.getElementById('stat-pending').querySelector('p').textContent = stats.pending;
             } catch (error) {
                 console.error('Error loading stats:', error);
+                showMessage('bookingsMessage', 'error', '無法載入統計資料，請稍後再試。');
             }
         }
 
@@ -551,12 +633,18 @@
             try {
                 const response = await fetch(`${API_BASE_URL}/bookings`, { headers: authHeaders() });
                 if (response.status === 401) return logout();
-                if (response.ok) {
-                    const bookings = await response.json();
-                    renderBookings(bookings);
+                if (!response.ok) {
+                    const errorPayload = await response.json().catch(() => ({}));
+                    console.error('Failed to load bookings:', response.status, errorPayload);
+                    showMessage('bookingsMessage', 'error', errorPayload.error || '無法載入預約資料，請稍後再試。');
+                    return;
                 }
+                const bookings = await response.json();
+                renderBookings(bookings);
+                hideMessage('bookingsMessage');
             } catch (error) {
                 console.error('Error loading bookings:', error);
+                showMessage('bookingsMessage', 'error', '無法載入預約資料，請稍後再試。');
             }
         }
 
@@ -614,12 +702,18 @@
             try {
                 const response = await fetch(`${API_BASE_URL}/settings`, { headers: authHeaders() });
                 if (response.status === 401) return logout();
-                if (response.ok) {
-                    currentSettings = await response.json();
-                    populateSettings();
+                if (!response.ok) {
+                    const errorPayload = await response.json().catch(() => ({}));
+                    console.error('Failed to load settings:', response.status, errorPayload);
+                    showMessage('settingsMessage', 'error', errorPayload.error || '無法載入設定，請稍後再試。');
+                    return;
                 }
+                currentSettings = await response.json();
+                populateSettings();
+                hideMessage('settingsMessage');
             } catch (error) {
                 console.error('Error loading settings:', error);
+                showMessage('settingsMessage', 'error', '無法載入設定，請稍後再試。');
             }
         }
 
@@ -672,7 +766,8 @@
                     currentSettings = (await response.json()).settings || payload;
                     showMessage('settingsMessage', 'success', '設定已更新');
                 } else {
-                    const result = await response.json();
+                    const result = await response.json().catch(() => ({}));
+                    console.error('Failed to save settings:', response.status, result);
                     showMessage('settingsMessage', 'error', result.error || '儲存失敗');
                 }
             } catch (error) {
@@ -734,18 +829,24 @@
         async function loadInstructions() {
             try {
                 const response = await fetch(`${API_BASE_URL}/settings`);
-                if (response.ok) {
-                    const settings = await response.json();
-                    const instructions = settings.bookingInstructions || {};
-                    document.getElementById('titleZh').value = instructions.titleZh || '';
-                    document.getElementById('titleEn').value = instructions.titleEn || '';
-                    for (let i = 1; i <= 6; i++) {
-                        document.getElementById(`instruction${i}Zh`).value = instructions[`instruction${i}Zh`] || '';
-                        document.getElementById(`instruction${i}En`).value = instructions[`instruction${i}En`] || '';
-                    }
+                if (!response.ok) {
+                    const errorPayload = await response.json().catch(() => ({}));
+                    console.error('Failed to load instructions:', response.status, errorPayload);
+                    showMessage('instructionsMessage', 'error', errorPayload.error || '無法載入預約須知，請稍後再試。');
+                    return;
                 }
+                const settings = await response.json();
+                const instructions = settings.bookingInstructions || {};
+                document.getElementById('titleZh').value = instructions.titleZh || '';
+                document.getElementById('titleEn').value = instructions.titleEn || '';
+                for (let i = 1; i <= 6; i++) {
+                    document.getElementById(`instruction${i}Zh`).value = instructions[`instruction${i}Zh`] || '';
+                    document.getElementById(`instruction${i}En`).value = instructions[`instruction${i}En`] || '';
+                }
+                hideMessage('instructionsMessage');
             } catch (error) {
                 console.error('Error loading instructions:', error);
+                showMessage('instructionsMessage', 'error', '無法載入預約須知，請稍後再試。');
             }
         }
 
@@ -761,13 +862,15 @@
                 if (response.status === 401) return logout();
                 if (response.ok) {
                     currentSettings = (await response.json()).settings || payload;
-                    showMessage('settingsMessage', 'success', '須知已更新');
+                    showMessage('instructionsMessage', 'success', '須知已更新');
                 } else {
-                    showMessage('settingsMessage', 'error', '儲存失敗');
+                    const result = await response.json().catch(() => ({}));
+                    console.error('Failed to save instructions:', response.status, result);
+                    showMessage('instructionsMessage', 'error', result.error || '儲存失敗');
                 }
             } catch (error) {
                 console.error('Error saving instructions:', error);
-                showMessage('settingsMessage', 'error', '儲存失敗');
+                showMessage('instructionsMessage', 'error', '儲存失敗');
             }
         }
 
@@ -775,12 +878,18 @@
             try {
                 const response = await fetch(`${API_BASE_URL}/admin/items`, { headers: authHeaders() });
                 if (response.status === 401) return logout();
-                if (response.ok) {
-                    currentItems = await response.json();
-                    renderItems();
+                if (!response.ok) {
+                    const errorPayload = await response.json().catch(() => ({}));
+                    console.error('Failed to load items:', response.status, errorPayload);
+                    showItemsMessage('error', errorPayload.error || '無法載入項目資料，請稍後再試。');
+                    return;
                 }
+                currentItems = await response.json();
+                renderItems();
+                hideMessage('itemsMessage');
             } catch (error) {
                 console.error('Error loading items:', error);
+                showItemsMessage('error', '無法載入項目資料，請稍後再試。');
             }
         }
 
@@ -849,7 +958,8 @@
                     resetItemForm();
                     loadItems();
                 } else {
-                    const result = await response.json();
+                    const result = await response.json().catch(() => ({}));
+                    console.error('Failed to save item:', response.status, result);
                     showItemsMessage('error', result.error || '儲存失敗');
                 }
             } catch (error) {
@@ -884,7 +994,8 @@
                     showItemsMessage('success', '項目已刪除');
                     loadItems();
                 } else {
-                    const result = await response.json();
+                    const result = await response.json().catch(() => ({}));
+                    console.error('Failed to delete item:', response.status, result);
                     showItemsMessage('error', result.error || '刪除失敗');
                 }
             } catch (error) {
@@ -895,13 +1006,23 @@
 
         function showItemsMessage(type, message) { showMessage('itemsMessage', type, message); }
 
+        function hideMessage(elementId) {
+            const el = document.getElementById(elementId);
+            if (!el) return;
+            el.className = 'message';
+            el.textContent = '';
+            el.style.display = 'none';
+        }
+
         function showMessage(elementId, type, message) {
             const el = document.getElementById(elementId);
             if (!el) return;
             el.className = `message ${type}`;
             el.textContent = message;
             el.style.display = 'block';
-            setTimeout(() => { el.style.display = 'none'; }, 4000);
+            if (type === 'success') {
+                setTimeout(() => { el.style.display = 'none'; }, 4000);
+            }
         }
 
         function handleTabClick(event) {
